Source/WebCore/platform/graphics/FontCache.cpp
@@ -34,6 +34,7 @@
 #include "FontGlyphs.h"
 #include "FontPlatformData.h"
 #include "FontSelector.h"
+#include "OpenTypeMathData.h"
 #include "WebKitFontFamilyNames.h"
 #include <wtf/HashMap.h>
 #include <wtf/ListHashSet.h>
@@ -266,8 +267,7 @@ FontPlatformData* FontCache::getCachedFontPlatformData(const FontDescription& fo
     return it->value.get();
 }
 
-#if ENABLE(OPENTYPE_VERTICAL)
-struct FontVerticalDataCacheKeyHash {
+struct FontFileCacheKeyHash {
     static unsigned hash(const FontCache::FontFileKey& fontFileKey)
     {
         return PtrHash<const FontCache::FontFileKey*>::hash(&fontFileKey);
@@ -281,7 +281,7 @@ struct FontVerticalDataCacheKeyHash {
     static const bool safeToCompareToEmptyOrDeleted = true;
 };
 
-struct FontVerticalDataCacheKeyTraits : WTF::GenericHashTraits<FontCache::FontFileKey> {
+struct FontFileCacheKeyTraits : WTF::GenericHashTraits<FontCache::FontFileKey> {
     static const bool emptyValueIsZero = true;
     static const bool needsDestruction = true;
     static const FontCache::FontFileKey& emptyValue()
@@ -299,9 +299,32 @@ struct FontVerticalDataCacheKeyTraits : WTF::GenericHashTraits<FontCache::FontFi
     }
 };
 
-typedef HashMap<FontCache::FontFileKey, RefPtr<OpenTypeVerticalData>, FontVerticalDataCacheKeyHash, FontVerticalDataCacheKeyTraits> FontVerticalDataCache;
+typedef HashMap<FontCache::FontFileKey, RefPtr<OpenTypeMathData>, FontFileCacheKeyHash, FontFileCacheKeyTraits> FontMathDataCache;
 
-FontVerticalDataCache& fontVerticalDataCacheInstance()
+static FontMathDataCache& fontMathDataCacheInstance()
+{
+    static NeverDestroyed<FontMathDataCache> fontMathDataCache;
+    return fontMathDataCache;
+}
+
+PassRefPtr<OpenTypeMathData> FontCache::getMathData(const FontFileKey& key, const FontPlatformData& fontData)
+{
+    FontMathDataCache& fontMathDataCache = fontMathDataCacheInstance();
+    FontMathDataCache::iterator result = fontMathDataCache.find(key);
+    if (result != fontMathDataCache.end())
+        return result.get()->value;
+
+    RefPtr<OpenTypeMathData> mathData = OpenTypeMathData::create(fontData);
+    if (!mathData->hasMathData())
+        mathData.clear();
+    fontMathDataCache.set(key, mathData);
+    return mathData;
+}
+
+#if ENABLE(OPENTYPE_VERTICAL)
+typedef HashMap<FontCache::FontFileKey, RefPtr<OpenTypeVerticalData>, FontFileCacheKeyHash, FontFileCacheKeyTraits> FontVerticalDataCache;
+
+static FontVerticalDataCache& fontVerticalDataCacheInstance()
 {
     static NeverDestroyed<FontVerticalDataCache> fontVerticalDataCache;
     return fontVerticalDataCache;
