Source/WebCore/platform/graphics/FontPlatformData.cpp
@@ -27,6 +27,11 @@
 #include <wtf/text/StringHash.h>
 #include <wtf/text/WTFString.h>
 
+#if OS(DARWIN)
+#include "SharedBuffer.h"
+#include <CoreGraphics/CGFont.h>
+#endif
+
 namespace WebCore {
 
 FontPlatformData::FontPlatformData(WTF::HashTableDeletedValueType)
@@ -168,5 +173,15 @@ const FontPlatformData& FontPlatformData::operator=(const FontPlatformData& othe
 
     return platformDataAssign(other);
 }
+
+#if OS(DARWIN)
+PassRefPtr<SharedBuffer> FontPlatformData::openTypeTable(uint32_t table) const
+{
+    if (CFDataRef data = CGFontCopyTableForTag(cgFont(), table))
+        return SharedBuffer::wrapCFData(data);
+    
+    return nullptr;
+}
+#endif
 
 }
